# src/dtos/auth.dto.ts
@@ -1,0 +1,13 @@
+import { z } from 'zod';
+
+export const loginBodySchema = z.object({
+  email: z.string().email(),
+  password: z.string().min(1)
+});
+
+export const refreshBodySchema = z.object({
+  refreshToken: z.string().min(10)
+});
+
+export type LoginBody = z.infer<typeof loginBodySchema>;
+export type RefreshBody = z.infer<typeof refreshBodySchema>;
